@@ -165,10 +165,8 @@ BUILD_ENVIRONMENT: Makefile
 BUILD_ENVIRONMENT-make: Makefile
 	echo BOOTCLASSPATH=\$${BOOTCLASSPATH}\''$(PATHSEP)'\'$(top_builddir)/libraries/javalib/rt.jar\''$(PATHSEP)'\'$(DNSJAVA_JAR)\''$(PATHSEP)'\'\; export BOOTCLASSPATH | sed 's,/,$(DIRSEP),g;s,\\,\\\\,g' > BUILD_ENVIRONMENT.new; \
 	echo CLASSPATH=.\''$(PATHSEP)'\'\$${GNU_CRYPTO_JAR}\''$(PATHSEP)'\'\$${JAVAX_SECURITY_JAR}\''$(PATHSEP)'\'$(BCEL_JAR)\''$(PATHSEP)'\'$(GNU_CRYPTO_JAR)\''$(PATHSEP)'\'$(JAVAX_SECURITY_JAR)\; export CLASSPATH | sed 's,/,$(DIRSEP),g;s,\\,\\\\,g' >> BUILD_ENVIRONMENT.new; \
-	echo KAFFELIBRARYPATH=\$${KAFFELIBRARYPATH+\"\$$KAFFELIBRARYPATH\"\''$(PATHSEP)'\'}`for f in $(JAVA_LIBS); do echo "$$f" | sed 's%/[^/]*$$%%' | xargs -n 1 -iXXX echo XXX"/.libs"; done | (tr '\012' ' '; echo) | sed -e 's/ $$//' -e "s/ /\'$(PATHSEP)\'/g"`\; export KAFFELIBRARYPATH >> BUILD_ENVIRONMENT.new; \
+	echo KAFFELIBRARYPATH=\$${KAFFELIBRARYPATH+\"\$$KAFFELIBRARYPATH\"\''$(PATHSEP)'\'}$(top_builddir)/libraries/clib/native/.libs\''$(PATHSEP)'\'$(top_builddir)/libraries/clib/net/.libs\''$(PATHSEP)'\'$(top_builddir)/libraries/clib/io/.libs\''$(PATHSEP)'\'$(top_builddir)/libraries/clib/nio/.libs\''$(PATHSEP)'\'$(top_builddir)/libraries/clib/zip/.libs\''$(PATHSEP)'\'$(top_builddir)/libraries/clib/management/.libs\''$(PATHSEP)'\'$(top_builddir)/libraries/clib/security/.libs\''$(PATHSEP)'\'$(top_builddir)/libraries/clib/classpath/.libs\; export KAFFELIBRARYPATH >> BUILD_ENVIRONMENT.new; \
 	echo JAVA=$(top_builddir)/kaffe/kaffe/kaffe-bin$(EXEEXT)\; export JAVA >> BUILD_ENVIRONMENT.new; \
-	echo LD_LIBRARY_PATH=$(top_builddir)/libraries/clib/classpath/.libs:\$${LD_LIBRARY_PATH}\; export LD_LIBRARY_PATH >> BUILD_ENVIRONMENT.new;\
-	echo DYLD_LIBRARY_PATH=$(top_builddir)/libraries/clib/classpath/.libs:\$${DYLD_LIBRARY_PATH}\; export DYLD_LIBRARY_PATH >> BUILD_ENVIRONMENT.new
 	rm -f BUILD_ENVIRONMENT
 	mv BUILD_ENVIRONMENT.new BUILD_ENVIRONMENT
 
